--- a/src/home.html
+++ b/src/home.html
@@ -1,91 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Home</title>
+    <link rel="stylesheets" href="css/styles.css">
+    <title>Welcome to Moti Leggese's Website</title>
 </head>
+
 <body>
-    <header>
-        <h1>Welcome to Moti Leggese's Website</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
-        <img src="images/home.jpg" alt="homepage Background">
-        <nav>
+    <header class="grid-container">
+        <h1 class="grid-item">Welcome to Moti Leggese's Website</h1>
+        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="grid-item">
+        <img src="images/home.jpg" alt="Homepage Background" class="grid-item">
+        <nav class="grid-item">
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="volunteer_activity.html">Volunteer Activity</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="home.html" class="nav-link">Home</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="skills.html" class="nav-link">Skills</a></li>
+                <li><a href="volunteer_activity.html" class="nav-link">Volunteer Activity</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <section>
-        <h2>About Me</h2>
-        <img src="images/about.jpg" alt="About Me Image">
-        <p>
-            Welcome! I'm Moti Leggese, a passionate third-year software engineering student. Explore my website to learn more about my skills, projects, and contributions.
+    <section class="grid-container">
+        <h2 class="grid-item">About Me</h2>
+        <img src="images/about.jpg" alt="About Me Image" class="grid-item">
+        <p class="grid-item">
+            Welcome! I'm Moti Leggese, a passionate third-year software engineering student. Explore my website to learn more
+            about my skills, projects, and contributions.
         </p>
     </section>
 
-    <section>
-        <h2>Featured Projects</h2>
-        <img src="images/featured.jpg" alt="Featured projetcs">
-        <p>
-            Check out some of my latest projects, showcasing my expertise in software development. Each project reflects my commitment to innovation and excellence.
+    <section class="grid-container">
+        <h2 class="grid-item">Featured Projects</h2>
+        <img src="images/featured.jpg" alt="Featured Projects" class="grid-item">
+        <p class="grid-item">
+            Check out some of my latest projects, showcasing my expertise in software development. Each project reflects
+            my commitment to innovation and excellence.
         </p>
-        <a href="https://github.com/motilegge/UGR-5389-14.git" target="_blank">Check my Projects on GitHub</a>
+        <a href="https://github.com/motilegge/UGR-5389-14.git" target="_blank" class="grid-item">Check my Projects on
+            GitHub</a>
     </section>
 
-    <section>
-        <h2>Skills and Expertise</h2>
-        <img src="images/core_skills.jpg" alt="core skill">
-        <p>
-            Explore my skills and expertise in software engineering. From web development to database management, I bring a diverse set of capabilities to the table. Check out my projects and see how I apply my skills to real-world challenges.
+    <section class="grid-container">
+        <h2 class="grid-item">Skills and Expertise</h2>
+        <img src="images/core_skills.jpg" alt="Core Skills" class="grid-item">
+        <p class="grid-item">
+            Explore my skills and expertise in software engineering. From web development to database management, I bring a
+            diverse set of capabilities to the table. Check out my projects and see how I apply my skills to real-world
+            challenges.
         </p>
-        <p>
-            Visit my <a href="skills.html">Skills page</a> for a detailed breakdown of the technologies and tools I work with.
-        </p>
-    </section>
-
-    <section>
-        <h2>Volunteer Activity and Contributions</h2>
-        <img src="images/volunteer.jpg" alt="volunteer_activity">
-        <p>
-            Discover my commitment to making a positive impact beyond the world of software. In the <a href="volunteer_activity.html">Volunteer Activity</a> section, I share experiences in contributing to positive change through hands-on projects and events.
-        </p>
-        <p>
-            Learn about my efforts in providing emotional care and making meaningful contributions to communities in need. Read about specific projects and initiatives that reflect my dedication to social responsibility.
+        <p class="grid-item">
+            Visit my <a href="skills.html" class="nav-link">Skills page</a> for a detailed breakdown of the technologies
+            and tools I work with.
         </p>
     </section>
 
-    <section>
-        <h2>Projest Pulse</h2>
-        <img src="images/pulse.jpg" alt="pulse">
-        <p>
-            Stay updated with my latest news and announcements. Whether it's a new project, collaboration, or an exciting development in the tech world, you'll find it here.
-        </p>
-        <ul>
-            <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank">Exciting News on X Platform</a></li>
-            <li><a href="https://t.me/motiition" target="_blank">Join me on Telegram for Live Updates</a></li>
+    <section class="grid-container">
+        <h2 class="grid-item">Volunteer Activity and Contributions</h2>
+        <p class="grid-item">Discover my commitment to making a positive impact beyond the world of software. In the <a
+                href="volunteer_activity.html" class="nav-link">Volunteer Activity</a> section, I share experiences in
+            contributing to positive change through hands-on projects and events.</p>
+        <p class="grid-item">Learn about my efforts in providing emotional care and making meaningful contributions to
+            communities in need. Read about specific projects and initiatives that reflect my dedication to social
+            responsibility.</p>
+    </section>
+
+    <section class="grid-container">
+        <h2 class="grid-item">Project Pulse</h2>
+        <p class="grid-item">Stay updated with my latest news and announcements. Whether it's a new project,
+            collaboration, or an exciting development in the tech world, you'll find it here.</p>
+        <ul class="grid-item">
+            <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank" class="nav-link">Exciting
+                    News on X Platform</a></li>
+            <li><a href="https://t.me/motiition" target="_blank" class="nav-link">Join me on Telegram for Live
+                    Updates</a></li>
         </ul>
     </section>
 
-    <section>
-        <h2>Get in Touch</h2>
-        <p>
-            Interested in collaborating or learning more about my work? Feel free to reach out! Visit the <a href="contact.html">Contact page</a> for direct contact information, my address, and social media links.
-        </p>
-        <p>
-            Whether you have a project in mind or just want to connect, I'm always open to new opportunities and collaborations.
-        </p>
-        <a href="contact.html">Contact Me</a>
+    <section class="grid-container">
+        <h2 class="grid-item">Get in Touch</h2>
+        <p class="grid-item">Interested in collaborating or learning more about my work? Feel free to reach out! Visit
+            the <a href="contact.html" class="nav-link">Contact page</a> for direct contact information, my address, and
+            social media links.</p>
+        <p class="grid-item">Whether you have a project in mind or just want to connect, I'm always open to new
+            opportunities and collaborations.</p>
+        <a href="contact.html" class="nav-link grid-item">Contact Me</a>
     </section>
 
-    <footer>
-        <p>&copy; 2023 Moti Leggese</p>
+    <footer class="grid-container">
+        <p class="grid-item">&copy; 2023 Moti Leggese</p>
     </footer>
 </body>
+
 </html>
