added stlyle for conatct and home

--- a/src/contact.html
+++ b/src/contact.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/contact.css">
     <title>Contact</title>
 </head>
+
 <body>
     <header>
         <h1>Moti Leggese</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
+        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" id="avatar_image">
     </header>
 
     <nav>
@@ -22,8 +24,8 @@
         </ul>
     </nav>
 
-    <main>
-        <section id="contactForm" class="flex-item">
+    <main class="flex-container">
+        <section id="contactForm">
             <h2>Contact Form</h2>
             <form action="#" method="post">
                 <label for="fullName">Full Name:</label>
@@ -42,7 +44,7 @@
             </form>
         </section>
 
-        <section id="directContact" class="flex-item">
+        <section id="directContact">
             <h2>Direct Contact</h2>
             <p>Feel free to reach out to me directly via email or phone. I'm always open to new opportunities and collaborations.</p>
             <address>
@@ -51,13 +53,13 @@
             </address>
         </section>
 
-        <section id="address" class="flex-item">
+        <section id="address">
             <h2>Address</h2>
             <p>If you prefer traditional mail or want to drop by, here's my address:</p>
             <p>Ghana St., Addis Ababa, Ethiopia</p>
         </section>
 
-        <section id="socialMedia" class="flex-item">
+        <section id="socialMedia">
             <h2>Social Media</h2>
             <p>Connect with me on social media for the latest updates and to stay in the loop:</p>
             <ul>
@@ -69,8 +71,9 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <p>&copy; 2023 Moti Leggese</p>
     </footer>
 </body>
+
 </html>
