added the css for the remaining

--- a/src/about.html
+++ b/src/about.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/about.css">
     <title>About Me</title>
 </head>
+
 <body>
     <header>
         <h1>About Moti Leggese</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
+        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" id="avatar_image">
         <nav>
             <ul>
                 <li><a href="home.html" class="nav-link">Home</a></li>
@@ -23,7 +25,7 @@
 
     <section id="section-introduction" class="flex-item">
         <h2>Introduction</h2>
-        <img src="images/intro.jpg" alt="Moti Leggese">
+        <img src="images/intro.jpg" alt="Moti Leggese" id="my_photo">
         <p>
             Welcome to my digital space! I'm Moti Leggese, a passionate third-year software engineering student on a journey to explore the vast world of technology.
         </p>
@@ -44,4 +46,5 @@
         <p>&copy; 2023 Moti Leggese</p>
     </footer>
 </body>
+
 </html>
