--- a/src/contact.html
+++ b/src/contact.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Moti Leggese</h1>
+        <h1 id="name">Moti Leggese</h1>
         <img src="images/avatar.jpg" alt="Moti Leggese Avatar" id="avatar_image">
     </header>
 
