--- a/src/volunteer_activity.html
+++ b/src/volunteer_activity.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/volunteer_activity.css">
     <title>Volunteer Activity</title>
 </head>
 <body>
     <header>
-        <h1>Moti Leggese</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
+        <h1 id="my_skills">Volunteer Activity</h1>
+        <img src="images/avatar.jpg" alt="Avatar Image" id="avatar_image">
+        <img src="images/se_skills.jpg" alt="Skills Image" id="nav_background">
+        <nav>
+            <ul>
+                <li><a href="home.html" class="nav-link">Home</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="skills.html" class="nav-link">Skills</a></li>
+                <li><a href="volunteer_activity.html" class="nav-link">Volunteer Activity</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <nav>
-        <ul>
-            <li><a href="home.html" class="nav-link">Home</a></li>
-            <li><a href="about.html" class="nav-link">About</a></li>
-            <li><a href="skills.html" class="nav-link">Skills</a></li>
-            <li><a href="volunteer_activity.html" class="nav-link">Volunteer Activity</a></li>
-            <li><a href="contact.html" class="nav-link">Contact</a></li>
-        </ul>
-    </nav>
 
     <main>
         <section id="section-contribution" class="flex-item">
