--- a/src/contact.html
+++ b/src/contact.html
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/contact.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Contact</title>
-</head>
+  </head>
 
-<body>
-    <header>
-        <h1 id="name">Moti Leggese</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" id="avatar_image">
-    </header>
-
-    <nav>
-        <ul>
+  <body>
+    <div class="flex-container">
+      <header class="contact-page-header">
+        <h1 class="flex-item">Moti Leggese</h1>
+        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="flex-item" id="avatar_image" />
+        <nav class="flex-item">
+          <ul>
             <li><a href="home.html" class="nav-link">Home</a></li>
             <li><a href="about.html" class="nav-link">About</a></li>
             <li><a href="skills.html" class="nav-link">Skills</a></li>
             <li><a href="volunteer_activity.html" class="nav-link">Volunteer Activity</a></li>
             <li><a href="contact.html" class="nav-link">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <main class="flex-container">
+        <contact-form class="flex-item">
+          <h2>Contact Form</h2>
+          <form action="#" method="post" class="grid-item">
+            <label for="fullName">Full Name:</label>
+            <input type="text" name="fullName" required>
+
+            <label for="address">Address:</label>
+            <textarea name="address" rows="3" required></textarea>
+
+            <label for="phoneNumber">Phone Number:</label>
+            <input type="tel" name="phoneNumber" required>
+
+            <label for="email">Email:</label>
+            <input type="email" name="email" required>
+
+            <input type="submit" value="Submit">
+        </form>
+        </contact-form>
+
+        <direct-contact class="flex-item">
+          <h2>Direct Contact</h2>
+          <p class="grid-item">
+            Feel free to reach out to me directly via email or phone. I'm always open to new opportunities and
+            collaborations.</p>
+        </direct-contact>
+
+        <my-address class="flex-item">
+          <h2>Address</h2>
+          <p>Email: <a href="mailto:motileggese@gmail.com">motileggese@gmail.com</a></p>
+                    <p>Phone: +251922426411</p>
+        </my-address>
+
+        <social-media class="flex-item">
+          <h2>Social Media</h2>
+          <p>
+            Connect with me on social media for the latest updates and to stay in the loop:</p>
+        <ul class="grid-item">
+            <li><a href="https://t.me/motiition" target="_blank">Telegram</a></li>
+            <img src="images/telegram.jpg" alt="Telegram Logo"class="logo">
+            <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank">X</a></li>
+            <img src="images/x.jpeg" alt="X Logo" class="logo">
         </ul>
-    </nav>
+          
+        </social-media>
+      </main>
 
-    <main class="flex-container">
-        <section id="contactForm">
-            <h2>Contact Form</h2>
-            <form action="#" method="post">
-                <label for="fullName">Full Name:</label>
-                <input type="text" name="fullName" required>
-
-                <label for="address">Address:</label>
-                <textarea name="address" rows="3" required></textarea>
-
-                <label for="phoneNumber">Phone Number:</label>
-                <input type="tel" name="phoneNumber" required>
-
-                <label for="email">Email:</label>
-                <input type="email" name="email" required>
-
-                <input type="submit" value="Submit">
-            </form>
-        </section>
-
-        <section id="directContact">
-            <h2>Direct Contact</h2>
-            <p>Feel free to reach out to me directly via email or phone. I'm always open to new opportunities and collaborations.</p>
-            <address>
-                <p>Email: <a href="mailto:motileggese@gmail.com">motileggese@gmail.com</a></p>
-                <p>Phone: +251922426411</p>
-            </address>
-        </section>
-
-        <section id="address">
-            <h2>Address</h2>
-            <p>If you prefer traditional mail or want to drop by, here's my address:</p>
-            <p>Ghana St., Addis Ababa, Ethiopia</p>
-        </section>
-
-        <section id="socialMedia">
-            <h2>Social Media</h2>
-            <p>Connect with me on social media for the latest updates and to stay in the loop:</p>
-            <ul>
-                <li><a href="https://t.me/motiition" target="_blank">Telegram</a></li>
-                <img src="images/telegram.jpg" alt="Telegram Logo">
-                <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank">X</a></li>
-                <img src="images/x.jpeg" alt="X Logo">
-            </ul>
-        </section>
-    </main>
-
-    <footer class="footer">
-        <p>&copy; 2023 Moti Leggese</p>
-    </footer>
-</body>
-
+      <footer class="flex-container">
+        <p class="flex-item">&copy; 2023 Moti Leggese</p>
+      </footer>
+    </div>
+  </body>
 </html>
+
