--- a/src/about.html
+++ b/src/about.html
@@ -4,50 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="css/styles.css">
+    <link rel="stylesheet" href="css/about.css">
     <title>About Me</title>
 </head>
 
 <body>
-    <header class="grid-container">
-        <h1 class="grid-item">About Moti Leggese</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="grid-item">
-        <nav class="grid-item">
-            <ul>
-                <li><a href="home.html" class="nav-link">Home</a></li>
-                <li><a href="about.html" class="nav-link">About</a></li>
-                <li><a href="skills.html" class="nav-link">Skills</a></li>
-                <li><a href="volunteer_activity.html" class="nav-link">Volunteer Activity</a></li>
-                <li><a href="contact.html" class="nav-link">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="grid-container">
+        <header>
+            <img src="images/avatar.jpg" alt="Moti Leggese Avatar" id="avatar_image">
+            
+            <nav>
+                <ul>
+                    <li><a href="home.html" class="nav-link">Home</a></li>
+                    <li><a href="about.html" class="nav-link">About</a></li>
+                    <li><a href="skills.html" class="nav-link">Skills</a></li>
+                    <li><a href="volunteer_activity.html" class="nav-link">Volunteer Activity</a></li>
+                    <li><a href="contact.html" class="nav-link">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <section class="grid-container">
-        <h2 class="grid-item">Introduction</h2>
-        <img src="images/intro.jpg" alt="Moti Leggese" class="grid-item">
-        <p class="grid-item">
-            Hello! I'm Moti Leggese, a third-year software engineering student on a journey to explore the vast world
-            of technology. Welcome to my digital space, where I share my enthusiasm for coding and problem-solving.
-        </p>
-    </section>
+        <section id="section-introduction" class="grid-item">
+            <h2>Introduction</h2>
+            <p>
+                Welcome to my digital space! I'm Moti Leggese, a passionate third-year software engineering student on a journey to explore the vast world of technology.
+            </p>
+        </section>
 
-    <section class="grid-container">
-        <h2 class="grid-item">Background</h2>
-        <p class="grid-item">
-            My educational journey took root in Lideta Catholic Cathedral School, where I spent 11 formative years
-            progressing through elementary, middle, and high school. I successfully completed my high school education
-            and graduated in 2022.
-        </p>
-        <img src="images/my_photo.jpg" alt="Moti Leggese" class="grid-item">
-        <p class="grid-item"> These years of academic exploration laid the foundation for my passion for learning and
-            set the stage for my pursuit of a degree in software engineering.
-        </p>
-    </section>
+        <section id="section-background" class="grid-item">
+            <h2>Background</h2>
+            <p>
+                My educational journey began at Lideta Catholic Cathedral School, where I spent 11 formative years progressing through elementary, middle, and high school. After successfully completing my high school education, I embarked on my current path of pursuing a degree in software engineering.
+            </p>
+            <p>
+                These years of academic exploration laid the foundation for my passion for learning and set the stage for my continued journey in the field of software engineering.
+            </p>
+        </section>
 
-    <footer class="grid-container">
-        <p class="grid-item">&copy; 2023 Moti Leggese</p>
-    </footer>
+        <footer>
+            <p>&copy; 2023 Moti Leggese</p>
+        </footer>
+    </div>
 </body>
 
 </html>
