--- a/src/contact.html
+++ b/src/contact.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="css/styles.css">
+    <link rel="stylesheet" href="css/contact.css">
     <title>Contact</title>
 </head>
 
 <body>
-    <header class="grid-container">
+    <header class="flex-container">
         <h1 class="grid-item">Moti Leggese</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="grid-item">
-        <img src="images/download.jpg" alt="Download Image" class="grid-item">
+        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="grid-item" id="avatar_image">
+       
         <nav class="grid-item">
             <ul>
                 <li><a href="home.html" class="nav-link">Home</a></li>
@@ -24,7 +24,7 @@
         </nav>
     </header>
 
-    <section class="grid-container">
+    <section class="flex-container">
         <h2 class="grid-item">Contact Form</h2>
         <form action="#" method="post" class="grid-item">
             <label for="fullName">Full Name:</label>
@@ -43,7 +43,7 @@
         </form>
     </section>
 
-    <section class="grid-container">
+    <section class="flex-container">
         <h2 class="grid-item">Direct Contact</h2>
         <p class="grid-item">
             Feel free to reach out to me directly via email or phone. I'm always open to new opportunities and
@@ -56,7 +56,7 @@
     </section>
 
     <!-- Address Section -->
-    <section class="grid-container">
+    <section class="flex-container">
         <h2 class="grid-item">Address</h2>
         <p class="grid-item">
             If you prefer traditional mail or want to drop by, here's my address:
@@ -67,7 +67,7 @@
     </section>
 
     <!-- Social Media Section -->
-    <section class="grid-container">
+    <section class="flex-container">
         <h2 class="grid-item">Social Media</h2>
         <p class="grid-item">
             Connect with me on social media for the latest updates and to stay in the loop:
@@ -80,7 +80,7 @@
         </ul>
     </section>
 
-    <footer class="grid-container">
+    <footer class="footer">
         <p class="grid-item">&copy; 2023 Moti Leggese</p>
     </footer>
 </body>
