--- a/src/skills.html
+++ b/src/skills.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="css/styles.css">
+    <link rel="stylesheet" href="css/skills.css">
     <title>Skills</title>
 </head>
 
 <body>
     <header class="grid-container">
         <h1 class="grid-item">Main Heading</h1>
-        <img src="images/avatar.jpg" alt="Avatar Image" class="grid-item">
-        <img src="images/se_skills.jpg" alt="Skills Image" class="grid-item">
+        <img src="images/avatar.jpg" alt="Avatar Image" class="grid-item" id="avatar_image">
+        <img src="images/se_skills.jpg" alt="Skills Image" class="grid-item" id="nav_background">
         <nav class="grid-item">
             <ul>
                 <li><a href="home.html" class="nav-link">Home</a></li>
