--- a/src/volunteer_activity.html
+++ b/src/volunteer_activity.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="css/styles.css">
+    <link rel="stylesheet" href="css/volunteer_activity.css">
     <title>Volunteer Activity</title>
 </head>
 
 <body>
     <header class="grid-container">
         <h1 class="grid-item">Moti Leggese</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="grid-item">
-        <img src="images/download.jpg" alt="Download Image" class="grid-item">
+        <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="grid-item" id="avatar_image">
+       
         <nav class="grid-item">
             <ul>
                 <li><a href="home.html" class="nav-link">Home</a></li>
@@ -22,6 +22,7 @@
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
         </nav>
+        <img src="images/download.jpg" alt="Download Image" class="grid-item" id="nav_background">
     </header>
 
     <main class="grid-container">
